--- a/client/src/pages/auth/styling/login.scss
+++ b/client/src/pages/auth/styling/login.scss
@@ -8,6 +8,7 @@
     background-color: whitesmoke;
     height: 100%;
     .loginCard{
+        background-color: rgba($color: #000000, $alpha: 0.8);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -26,10 +27,10 @@
                 margin-right: 0.5rem;
             }
             .loginHeading1{
-                font-family: $primary-font;
+                font-family: $secondary-font;
                 font-weight: 600;
                 font-size: 40px;
-                color: $primary-color;
+                color: white;
                 margin-right: 0.5rem;
             }
             .loginHeading2{
@@ -45,16 +46,25 @@
             width: 100%;
             .nameField{
                 width: 49.5%;
+                .MuiInputLabel-root{
+                    color: white;
+                }
                 .MuiOutlinedInput-root{
+                    color: white;
                     border-radius: 10px;
                 }
             }
             margin-bottom: 0.5rem;
         }
         .loginField{
+            color: white;
             margin-bottom: 1rem;
             width: 100%;
+            .MuiInputLabel-root{
+                color: white;
+            }
             .MuiOutlinedInput-root{
+                color: white;
                 border-radius: 10px;
             }
         }   
