-Frontend form creation -backend -> token validation and user extraction, backend function for temp creation

--- a/client/src/styling/theme.scss
+++ b/client/src/styling/theme.scss
@@ -1,5 +1,6 @@
 $primary-color: #60a7af;
 $secondary-color: #FE7A0C;
+$back-color: #333333;
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Rubik Glitch', cursive;
 $title_size: 40px;
