--- a/client/src/pages/home/styling/home.scss
+++ b/client/src/pages/home/styling/home.scss
@@ -23,7 +23,7 @@
         }
     }
     .homeTabBar{
-        background-color: rgba($color: #000000, $alpha: 0.8);
+        background-color: $back-color;
         padding: 0.5rem;
         .homeToolbar{
             width: 100%;
