--- a/client/src/pages/auth/styling/login.scss
+++ b/client/src/pages/auth/styling/login.scss
@@ -16,6 +16,15 @@
         padding: 1rem;
         border-radius: 10px;
         width: 400px;
+        position: relative;
+        padding-top: 65px;
+        .loginAvatar{
+            height: 110px;
+            width: 110px;
+            position: absolute;
+            top: -50px;
+            border: 5px solid whitesmoke;
+        }
         .loginHeadingContainer{
             display: flex;
             width: 100%;
