--- a/client/src/pages/auth/styling/login.scss
+++ b/client/src/pages/auth/styling/login.scss
@@ -84,3 +84,10 @@
         }
     }
 }
+@media screen and (max-width: 768px) {
+    .loginContainer{
+        .loginCard{
+            width: 350px;
+        }
+    }
+}
